--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
   }
 }
 
-#jdk23 {
+#jdk23Image {
   background-image: url("./images/JDK23/rc24-java23.jpg");
   width: 100%;
   height: 150px;
@@ -76,8 +76,24 @@ body {
   background-size: contain;
 }
 
-#environment {
+#environmentImage {
   background-image: url("./images/muliple_angular_environments/environment.png");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#RemoteJobsImage {
+  background-image: url("./images/RemoteJobs/RemoteJobs.webp");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#openAIImage {
+  background-image: url("./images/open_ai/ai_image.jpg");
   width: 100%;
   height: 150px;
   background-repeat: no-repeat;
