--- a/style.css
+++ b/style.css
@@ -99,3 +99,19 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+#MissingImage {
+  background-image: url("./images/MissingImages/MissingImagesDefaultPlaceholder.png");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#AWSToGCP {
+  background-image: url("./images/AWS-To-GCP/figure-2-Single-AWS-DataSync-agent-architecture.png");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
