--- a/style.css
+++ b/style.css
@@ -115,3 +115,19 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+#POWERBI_IMAGE {
+  background-image: url("./images/PowerBI/power_bi.jpg");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#JOB_SEARCH_IMAGE {
+  background-image: url("./images/job_search/JobSearch.jpg");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
