--- a/style.css
+++ b/style.css
@@ -131,3 +131,19 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+#OKTA_fullstack_image {
+  background-image: url("./images/Angular/okta.png");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#matplotlibImage {
+  background-image: url("./images/python/Combining-Bar-and-Line-Charts1.jpg");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
