--- a/style.css
+++ b/style.css
@@ -163,3 +163,11 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+#htmlToPDFImg {
+  background-image: url("./images/PDF/html_to_pdf.webp");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
