--- a/style.css
+++ b/style.css
@@ -339,3 +339,27 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+#javaScriptInterLinksImg {
+  background-image: url("./images/JavaScript/learn-intermediate-javascript.webp");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#javaScriptLinksImg {
+  background-image: url("./images/JavaScript/JavaScript-Introduction.jpg");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#javaScriptDOMLinksImg {
+  background-image: url("./images/JavaScript/JavaScript-DOM.svg");
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
