--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ body {
 }
 
 #jqueryLinksImg {
-  background-image: url("./images/JQuery/jquery.png");
+  background-image: url("./images/Jquery/jquery.png");
   width: 100%;
   height: 150px;
   background-repeat: no-repeat;
